fixed height resizing bug on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,6 +47,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     scrollbar-width: none;
+  height: 100%;
+  width: 100%;
 }
 
 a {
